[feature] add check url before saveUrl and refactoring
