# docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/url/save": {
+        "/api/v1/url/save": {
             "post": {
                 "description": "Сохраняет оригинальный URL и возвращает alias. Если alias не передан, генерируется случайный.",
                 "tags": [
@@ -53,7 +53,7 @@
                 }
             }
         },
-        "/url/{alias}": {
+        "/api/v1/url/{alias}": {
             "delete": {
                 "description": "Удаляет URL по alias. Возвращает статус 204 No Content в случае успеха.",
                 "tags": [
@@ -88,7 +88,7 @@
                 }
             }
         },
-        "/{alias}": {
+        "/api/v1/{alias}": {
             "get": {
                 "description": "Получает alias из URL, ищет соответствующий оригинальный URL и выполняет редирект (HTTP 302).",
                 "tags": [
