# internal/http-server/handlers/v1/routes.go
@@ -1,0 +1,35 @@
+package v1
+
+import (
+	"log/slog"
+	"net/http"
+	mwLogger "url-shortener/internal/http-server/middleware/logger"
+
+	_ "url-shortener/docs"
+
+	"github.com/go-chi/chi/v5"
+	"github.com/go-chi/chi/v5/middleware"
+	httpSwagger "github.com/swaggo/http-swagger"
+)
+
+type Handlers interface {
+	SaveHandler() http.HandlerFunc
+	DeleteHandler() http.HandlerFunc
+	RedirectHandler() http.HandlerFunc
+}
+
+func RegisterRoutes(log *slog.Logger, router *chi.Mux, handlers Handlers) {
+	router.Use(middleware.RequestID)
+	router.Use(middleware.Logger)
+	router.Use(mwLogger.New(log))
+	router.Use(middleware.Recoverer)
+	router.Use(middleware.URLFormat)
+
+	router.Post("/api/v1/url/save", handlers.SaveHandler())
+	router.Delete("/api/v1/url/{alias}", handlers.DeleteHandler())
+	router.Get("/api/v1/{alias}", handlers.RedirectHandler())
+	router.Get("/api/v1/swagger/*", httpSwagger.Handler(
+		httpSwagger.URL("/api/v1/swagger/doc.json"),
+	),
+	)
+}
